Changelog for CinemaVision

[- 1.0.14 -]

- fix:     Issues found with non-english characters in the file names of Action files causing errors

[- 1.0.13 -]

- add:     Now has the ability to accept dbtype and dbid args for skin integration

[- 1.0.12 -]

- fix:     Broken iTunes scraper
- change:  Updated icon
- change:  Now automatically updates content when the content path is changed
- fix:     Now cleans items from the database that do not have the content path as their path prefix
- fix:     Content scraper now recognizes files with capitalized extensions
- add:     Added language string 'CinemaVision' with ID 32000 to help skinners
- add:     Portuguese (Brazil) language strings
- add:     Screenshots (for display in add-on info)

[- 1.0.11 -]

- fix:     Startup error on some devices (Android/Shield?)
- change:  Greatly decrease content updating time
- add:     Extra logging for sequence saving and trivia content updating
- fix:     Handle trivia with same file name but different extension

[- 1.0.10 -]

- fix:     Error playing sequence when video bumper type is not set
- change:  Now highlights type setting and module title in red when video bumper type is not set
- fix:     (Hopefully - untested) Hachoir module causing errors when charset is an unknown encoding
- fix:     (Possible) - Error when playing sequence caused when storing a setting value
- add:     Detect Atmos and DTS-X tags in filenames when determining audio format
- fix:     Bad default regular expressions for slides causing issues with extensions other than .jpg
- fix:     On Windows, python and command actions were causing Kodi to minimize
- fix:     Possible fix for sequences being saved corrupted

[- 1.0.9 -]

- fix:     Trailers with source 'Directory' were not being filtered for video files only

[- 1.0.8 -]

- fix:     Various encoding errors when loading content

[- 1.0.7 -]

- fix:     Various encoding errors
- fix:     Fatal error when resolving a trailer's playable URL