@@ -488,7 +488,7 @@
 
                         <itemlayout height="80">
                             <control type="group">
-                                <visible>!IsEmpty(Container(201).ListItem.Property(enabled))</visible>
+                                <visible>!IsEmpty(Window(10000).Property(script.cinemavision.sequence.item.enabled))</visible>
                                 <control type="image">
                                     <posx>25</posx>
                                     <posy>5</posy>
@@ -510,7 +510,7 @@
                                 </control>
                             </control>
                             <control type="group">
-                                <visible>IsEmpty(Container(201).ListItem.Property(enabled))</visible>
+                                <visible>IsEmpty(Window(10000).Property(script.cinemavision.sequence.item.enabled))</visible>
                                 <control type="image">
                                     <posx>25</posx>
                                     <posy>5</posy>
@@ -559,7 +559,7 @@
                                 </control>
 
                                 <control type="group">
-                                    <visible>!IsEmpty(Container(201).ListItem.Property(enabled))</visible>
+                                    <visible>!IsEmpty(Window(10000).Property(script.cinemavision.sequence.item.enabled))</visible>
                                     <control type="image">
                                         <posx>5</posx>
                                         <posy>5</posy>
@@ -581,7 +581,7 @@
                                     </control>
                                 </control>
                                 <control type="group">
-                                    <visible>IsEmpty(Container(201).ListItem.Property(enabled))</visible>
+                                    <visible>IsEmpty(Window(10000).Property(script.cinemavision.sequence.item.enabled))</visible>
                                     <control type="image">
                                         <posx>5</posx>
                                         <posy>5</posy>
